<resources>
    <string name="app_name">Backgammon</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="title_activity_in_game">Game</string>
    <string name="title_activity_trophy">Trophy Room</string>
    <string name="title_activity_stats">Stats</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login/signup -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="repeat_password">Repeat the password</string>
    <string name="action_sign_in">Sign up for an account</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_in_short">Sign up</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_empty_password">You have to fill out the password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="suggest_signup">"Don't have an account?"
    </string>
    <string name="suggest_login">"Already a user?"
    </string>
    <string name="error_password_nomatch">The passwords have to be identical</string>
    <string name="action_log_in_short">Log in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clock_image_description">An image of a clock</string>
    <string name="point_image_description">An image of a point</string>
    <string name="player_image_description">An image of a player</string>

    <!-- Strings related to buttons -->
    <string name="btn_to_stats">Stats</string>
    <string name="btn_to_trophy">Trophies</string>
    <string name="btn_chat">Submit</string>
    <string name="btn_to_new_game">New game</string>
    <string name="chat_testMsg">Feel the Bern!</string>
    <string name="chat_hint">Enter a message...</string>
    <string name="btn_watch">Watch</string>
    <string name="swap_description">A button that switches between views</string>
    <string name="human">Human</string>
    <string name="bot">Bot</string>
    <string name="onePoint">1</string>
    <string name="ninePoint">9</string>
    <string name="sevenPoint">7</string>
    <string name="fivePoint">5</string>
    <string name="threePoint">3</string>
    <string name="infinityTime">∞</string>
    <string name="s15Time">10 s</string>
    <string name="s30Time">20 s</string>
    <string name="s45Time">30 s</string>
    <string name="android_image_description">An image of an android</string>
    <string name="easyDifficulty">Easy</string>
    <string name="mediumDifficulty">Medium</string>
    <string name="hardDifficulty">Hard</string>
    <string name="create_match">Let\'s do this!</string>
    <string name="lorem_ipsum">But I must explain to you how all this mistaken idea of denouncing of a pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?</string>
    <string name="heading_example">Francis J. Underwood</string>
    <string name="stats_opponent">Ted Cruz</string>
    <string name="pawn_image_description">An image of a smiley face</string>
    <string name="leave_match">Leave match</string>
    <string name="example_time_left">45</string>
    <string name="btn_ok">Ok</string>
    <string name="present_trophy_heading">WOW! A NEW TROPHY!</string>
    <string name="throw_dice">Throw Dices</string>
    <string name="end_turn">End Turn</string>
    <string name="double_stakes">Double Stakes</string>
    <string name="match_time_example">No time limit</string>
    <string name="match_score_example">5 point match</string>
    <string name="match_heading_example">The match is over!</string>
    <string name="match_post_info_example">IceHot1 won by backgammon! \nThe cube miltiplier was 2 \nTotal points to IceHot1: 6</string>
</resources>
